# Cortex

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy-backend.yml
alembic/: env.py
alembic/versions/: 041ac49d75a7_initial_migration.py  07bc602e08fc_add_agent_model_with_agentid_field.py  109654ab3d43_remove_is_active_from_llm_providers_and_.py  10fd4983102a_create_tables.py  7dde0fdd5485_add_user_secrets_table.py  90ec662a6c0a_add_rag_knowledge_base_and_refactor_.py  bbfef7e9d726_add_missing_tables.py
app/api/v1/: agent_route.py  agents.py  chat.py  frameworks.py  metrics.py  object_storage.py  ocr.py  providers.py  sandbox.py  secrets.py  sessions.py  tools.py
app/api/v1/textual/: adk_route.py  agno_route.py  langchain_route.py  llama_index_workflow_route.py
app/api/v1/voice/: livekit_voice_agent_route.py
app/auth/: clerk_auth.py
app/config/: settings.py
app/db/: database.py  models.py  redis_client.py
app/integrations/: llm_router.py  mini_client.py
app/integrations/aws/: aws_client.py
app/models/: framework.py  session.py
app/schemas/: ToolCallSchema.py  agents_schema.py  api_schemas.py  langchain_schema.py  llamaindex_schema.py  provider_schemas.py  sandbox_schema.py  secrets_schema.py
app/services/: agent_service.py  file_service.py  multimodal_parser.py  sandbox_service.py  session_service.py
app/utils/: abstract_agno_openaichat.py  custom_universal_api_tool.py  encryption.py  logger.py  placeholder_args_sub.py  tool_call_injection.py
docs/: e2b_integration.md  llama_index.md
llms/: base.py
scripts/: __init__.py  check_tables.py  create_agents_table.sql  init_providers.py  push_to_ecr.ps1  reset_database.py  setup_agents_table.ps1
tests/: test_api.py  test_auth.py  test_db.py
tests/unit/: test_agno_route.py  test_cerebras_integration.py  test_chat_metrics_db.py  test_db.py  test_db_connection.py  test_dynamic_tool_injection.py  test_sandboxes.py
