[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.8",
    "clerk-backend-api>=3.3.0",
    "e2b-code-interpreter>=2.0.0",
    "fastapi>=0.116.2",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "langchain==1.0.0a6",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "litellm>=1.77.1",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "llama-cpp-python>=0.3.16",
    "llama-index-llms-groq>=0.4.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
]
