[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.8",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "cerebras-cloud-sdk>=1.50.1",
    "clerk-backend-api>=3.3.0",
    "cryptography>=45.0.7",
    "e2b-code-interpreter>=2.0.0",
    "fastapi>=0.116.2",
    "fastapi-clerk-auth>=0.0.7",
    "fastmcp>=2.12.3",
    "google-adk>=1.16.0",
    "google-genai>=1.45.0",
    "httpx>=0.28.1",
    "langchain==1.0.0a6",
    "langchain-cerebras>=0.5.0",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-mistralai>=0.2.12",
    "langchain-nvidia-ai-endpoints>=0.3.18",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-sambanova>=0.2.0",
    "langgraph>=0.6.7",
    "litellm>=1.77.1",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "llama-cpp-python>=0.3.16",
    "llama-index>=0.14.4",
    "llama-index-llms-groq>=0.4.1",
    "llama-index-llms-openai>=0.6.3",
    "loguru>=0.7.3",
    "mistralai>=1.9.11",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "python-ulid[pydantic]>=3.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
